# RadlogistikHavixbeck

./: .gitignore  check_large_files.py  download_osm_pois.py  example.ipynb  index.html  main.py  poi_map.html  pyproject.toml
aoi/: aoi.gpkg
custom_data/: goods.csv  loops.json  points_of_interest.csv
data/: goods.csv  loops.json  points_of_interest.csv  restaurant_suppliers.csv
loops/: Landwirtschaft_loops.geojson  Lebensmittelhandel_loops.geojson  Restaurants_loops.geojson  Stift_Tilbeck_loops.geojson  Wochenmarkt_loops.geojson  producer_loops.geojson
marp/: README.md  convert_assets_to_jpg.py  map_embed.js  pdf_embed_fix.js  presentation.html  presentation.md  render_pdf_pages.py  text.txt  theme.css
osm_data/: goods.csv  points_of_interest.csv
osm_downloader/: osm_goods.csv  osm_poi_config.json
report/latex/: main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.tex  main.toc  references.bib
src/: build_index.py  co2.py  column_translations.json  connections.py  data_utils.py  delivery_loops.py  geocode.py  languages.json  loop_format.py  loop_solver.py  osm.py  osm_download.py  pipeline.py  restaurant_loops.py  route_map.py  route_map_scripts.js  route_map_styles.css  routing.py
