[project]
name = "Radlogistik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "geopy>=2.4.1",
    "h3>=4.4.2",
    "igraph>=1.0.0",
    "leafmap>=0.62.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "osm2geojson>=0.3.2",
    "osmnx>=2.1.0",
    "pandas>=3.0.3",
    "polyline>=2.0.4",
    "pycountry>=26.2.16",
    "pydeck>=0.9.2",
    "rapidfuzz>=3.14.5",
    "rasterio>=1.5.0",
    "scikit-image>=0.26.0",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
    "uvicorn>=0.48.0",
]

[tool.uv.workspace]
members = [
    "radlogistik-havixbeck-optimizer",
]
